--- a/Practice/CricketScoreBoard/style.css
+++ b/Practice/CricketScoreBoard/style.css
@@ -77,7 +77,7 @@ li {
 }
 
 
-/* .run-circle{
+.run-circle{
     border: 1px solid white;
     border-radius: 50%;
     padding: 4px;
@@ -99,7 +99,7 @@ li {
     margin-bottom: 20px;
     margin-top: 20px;
     color: lightblue;
-} */
+}
 
 
 
